<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_img"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/name"

        app:layout_constraintBottom_toBottomOf="@+id/horizon1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/off"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10dp"
        android:contentDescription="@string/off"
        android:src="@drawable/off"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizon4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical3" />

    <ImageView
        android:id="@+id/vibrate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10dp"
        android:contentDescription="@string/vibrate"
        android:src="@drawable/vibrate"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizon4"
        app:layout_constraintEnd_toEndOf="@+id/vertical3"
        app:layout_constraintStart_toStartOf="@+id/vertical2" />

    <ImageView
        android:id="@+id/music"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10dp"
        android:contentDescription="@string/music"
        android:src="@drawable/music"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizon4"
        app:layout_constraintEnd_toEndOf="@+id/vertical2"
        app:layout_constraintStart_toStartOf="@+id/vertical1" />

    <ImageView
        android:id="@+id/sound"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/sound"
        android:padding="10dp"
        android:src="@drawable/sound"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizon4"
        app:layout_constraintEnd_toEndOf="@+id/vertical1"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/play"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/play"
        android:src="@drawable/play"

        app:layout_constraintBottom_toBottomOf="@+id/horizon3"
        app:layout_constraintTop_toTopOf="@+id/horizon2"
        app:layout_constraintEnd_toEndOf="@+id/vertical3"
        app:layout_constraintStart_toStartOf="@+id/vertical1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizon1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizon2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizon3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizon4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>