<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <com.google.android.gms.ads.AdView
        android:id="@+id/banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/v1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/my_banner"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/h2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/my_advertising" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintTop_toTopOf="@+id/v1"
        app:layout_constraintBottom_toBottomOf="@+id/v2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>











    <ImageView
        android:id="@+id/skip"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"

        app:layout_constraintTop_toTopOf="@+id/v3"
        app:layout_constraintBottom_toBottomOf="@+id/v4"
        app:layout_constraintStart_toStartOf="@+id/h2"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/skip_button" />

    <ImageView
        android:id="@+id/hint"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"

        app:layout_constraintTop_toTopOf="@+id/v5"
        app:layout_constraintBottom_toBottomOf="@+id/v6"
        app:layout_constraintStart_toStartOf="@+id/h2"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/hint_button" />

    <ImageView
        android:id="@+id/settings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"

        app:layout_constraintTop_toTopOf="@+id/v6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/h1"
        android:contentDescription="@string/hint_button" />

    <ImageView
        android:id="@+id/coins"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"

        app:layout_constraintTop_toTopOf="@+id/v6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/h1"
        app:layout_constraintEnd_toEndOf="@+id/h2"
        android:contentDescription="@string/hint_button" />

    <ImageView
        android:id="@+id/home"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"

        app:layout_constraintTop_toTopOf="@+id/v6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/h2"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/hint_button" />








    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />









    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>